[project]
name = "analysis_tools"
version = "0.0.1"
authors = [
  { name="Roger Ianjamasimanana", email="ianja@iaa.es" },
]
description = "Tools to manipulate fits files such as cutting a cube or 2D fits files within a circle or rectangle. Rotating fits image.  "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

